{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 23,
  "lineage": "cacfa881-3178-5472-64d8-3a248d040557",
  "resources": [
    {
      "module": "module.nat-gateway",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_for_nat_gateway_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ff3e3478501a4de7",
            "arn": "arn:aws:ec2:us-east-1:427601800855:elastic-ip/eipalloc-0ff3e3478501a4de7",
            "domain": "vpc",
            "id": "eipalloc-0ff3e3478501a4de7",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-219-175-232.compute-1.amazonaws.com",
            "public_ip": "3.219.175.232",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat gateway az1 eip"
            },
            "tags_all": {
              "Name": "nat gateway az1 eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.nat-gateway",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_for_nat_gateway_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-012cb63f3363a9641",
            "arn": "arn:aws:ec2:us-east-1:427601800855:elastic-ip/eipalloc-012cb63f3363a9641",
            "domain": "vpc",
            "id": "eipalloc-012cb63f3363a9641",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-208-98-147.compute-1.amazonaws.com",
            "public_ip": "44.208.98.147",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat gateway az2 eip"
            },
            "tags_all": {
              "Name": "nat gateway az2 eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.nat-gateway",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ff3e3478501a4de7",
            "association_id": "eipassoc-07cc6cd925ca2060b",
            "connectivity_type": "public",
            "id": "nat-0e7441be88b1de06d",
            "network_interface_id": "eni-0692d1377569a96b0",
            "private_ip": "10.0.0.174",
            "public_ip": "3.219.175.232",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-04d2f8ba2fd091889",
            "tags": {
              "Name": "nat gateway az1"
            },
            "tags_all": {
              "Name": "nat gateway az1"
            }
          },
          "dependencies": [
            "module.nat-gateway.aws_eip.eip_for_nat_gateway_az1",
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_subnet.public_subnet_az1",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nat-gateway",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-012cb63f3363a9641",
            "association_id": "eipassoc-0787e6cacd8e8a515",
            "connectivity_type": "public",
            "id": "nat-046366becec44c0ec",
            "network_interface_id": "eni-0c3defd2764f2eef0",
            "private_ip": "10.0.1.243",
            "public_ip": "44.208.98.147",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0fda2db525c0a1d1e",
            "tags": {
              "Name": "nat gateway az2"
            },
            "tags_all": {
              "Name": "nat gateway az2"
            }
          },
          "dependencies": [
            "module.nat-gateway.aws_eip.eip_for_nat_gateway_az2",
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_subnet.public_subnet_az2",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nat-gateway",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:427601800855:route-table/rtb-053b9c4112e54e7f4",
            "id": "rtb-053b9c4112e54e7f4",
            "owner_id": "427601800855",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e7441be88b1de06d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private route table az1"
            },
            "tags_all": {
              "Name": "private route table az1"
            },
            "timeouts": null,
            "vpc_id": "vpc-03ec52af16e129f03"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nat-gateway.aws_eip.eip_for_nat_gateway_az1",
            "module.nat-gateway.aws_nat_gateway.nat_gateway_az1",
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_subnet.public_subnet_az1",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nat-gateway",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:427601800855:route-table/rtb-0aa19e646a16758b8",
            "id": "rtb-0aa19e646a16758b8",
            "owner_id": "427601800855",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-046366becec44c0ec",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private route table az2"
            },
            "tags_all": {
              "Name": "private route table az2"
            },
            "timeouts": null,
            "vpc_id": "vpc-03ec52af16e129f03"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nat-gateway.aws_eip.eip_for_nat_gateway_az2",
            "module.nat-gateway.aws_nat_gateway.nat_gateway_az2",
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_subnet.public_subnet_az2",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nat-gateway",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_app_subnet_az1_route_table_az1_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-065fdc75adb2f5fbf",
            "route_table_id": "rtb-053b9c4112e54e7f4",
            "subnet_id": "subnet-002e724c559b1018e"
          },
          "dependencies": [
            "module.nat-gateway.aws_eip.eip_for_nat_gateway_az1",
            "module.nat-gateway.aws_nat_gateway.nat_gateway_az1",
            "module.nat-gateway.aws_route_table.private_route_table_az1",
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_subnet.private_app_subnet_az1",
            "module.vpc.aws_subnet.public_subnet_az1",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nat-gateway",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_app_subnet_az2_route_table_az2_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05552c4f761da9901",
            "route_table_id": "rtb-0aa19e646a16758b8",
            "subnet_id": "subnet-08ac6e3d127c451e1"
          },
          "dependencies": [
            "module.nat-gateway.aws_eip.eip_for_nat_gateway_az2",
            "module.nat-gateway.aws_nat_gateway.nat_gateway_az2",
            "module.nat-gateway.aws_route_table.private_route_table_az2",
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_subnet.private_app_subnet_az2",
            "module.vpc.aws_subnet.public_subnet_az2",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nat-gateway",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_data_subnet_az1_route_table_az1_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eb6b90c8fff2d872",
            "route_table_id": "rtb-053b9c4112e54e7f4",
            "subnet_id": "subnet-0ce5bc4900901c499"
          },
          "dependencies": [
            "module.nat-gateway.aws_eip.eip_for_nat_gateway_az1",
            "module.nat-gateway.aws_nat_gateway.nat_gateway_az1",
            "module.nat-gateway.aws_route_table.private_route_table_az1",
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_subnet.private_data_subnet_az1",
            "module.vpc.aws_subnet.public_subnet_az1",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nat-gateway",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_data_subnet_az2_route_table_az2_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a292bcab5e61d928",
            "route_table_id": "rtb-0aa19e646a16758b8",
            "subnet_id": "subnet-07e0f76ff889ce580"
          },
          "dependencies": [
            "module.nat-gateway.aws_eip.eip_for_nat_gateway_az2",
            "module.nat-gateway.aws_nat_gateway.nat_gateway_az2",
            "module.nat-gateway.aws_route_table.private_route_table_az2",
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_subnet.private_data_subnet_az2",
            "module.vpc.aws_subnet.public_subnet_az2",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:427601800855:internet-gateway/igw-074d0968378dddb2d",
            "id": "igw-074d0968378dddb2d",
            "owner_id": "427601800855",
            "tags": {
              "Name": "demo_project-igw"
            },
            "tags_all": {
              "Name": "demo_project-igw"
            },
            "vpc_id": "vpc-03ec52af16e129f03"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:427601800855:route-table/rtb-07485372481b8a41d",
            "id": "rtb-07485372481b8a41d",
            "owner_id": "427601800855",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-074d0968378dddb2d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public rout table"
            },
            "tags_all": {
              "Name": "public rout table"
            },
            "timeouts": null,
            "vpc_id": "vpc-03ec52af16e129f03"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_az1_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dab24a776c177a98",
            "route_table_id": "rtb-07485372481b8a41d",
            "subnet_id": "subnet-04d2f8ba2fd091889"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.public_subnet_az1",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_az2_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06720c772bceb331b",
            "route_table_id": "rtb-07485372481b8a41d",
            "subnet_id": "subnet-0fda2db525c0a1d1e"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.public_subnet_az2",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_app_subnet_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:427601800855:subnet/subnet-002e724c559b1018e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-002e724c559b1018e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "427601800855",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private app subnet az1"
            },
            "tags_all": {
              "Name": "private app subnet az1"
            },
            "vpc_id": "vpc-03ec52af16e129f03"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_app_subnet_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:427601800855:subnet/subnet-08ac6e3d127c451e1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08ac6e3d127c451e1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "427601800855",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private app subnet az2"
            },
            "tags_all": {
              "Name": "private app subnet az2"
            },
            "vpc_id": "vpc-03ec52af16e129f03"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_data_subnet_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:427601800855:subnet/subnet-0ce5bc4900901c499",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ce5bc4900901c499",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "427601800855",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private data subnet az1"
            },
            "tags_all": {
              "Name": "private data subnet az1"
            },
            "vpc_id": "vpc-03ec52af16e129f03"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_data_subnet_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:427601800855:subnet/subnet-07e0f76ff889ce580",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07e0f76ff889ce580",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "427601800855",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private data subnet az2"
            },
            "tags_all": {
              "Name": "private data subnet az2"
            },
            "vpc_id": "vpc-03ec52af16e129f03"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:427601800855:subnet/subnet-04d2f8ba2fd091889",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04d2f8ba2fd091889",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "427601800855",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public subnet az1"
            },
            "tags_all": {
              "Name": "public subnet az1"
            },
            "vpc_id": "vpc-03ec52af16e129f03"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:427601800855:subnet/subnet-0fda2db525c0a1d1e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fda2db525c0a1d1e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "427601800855",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public subnet az2"
            },
            "tags_all": {
              "Name": "public subnet az2"
            },
            "vpc_id": "vpc-03ec52af16e129f03"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:427601800855:vpc/vpc-03ec52af16e129f03",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-008e042d9ec2589ec",
            "default_route_table_id": "rtb-091f15a97cd9a349b",
            "default_security_group_id": "sg-023bc34b618d359ce",
            "dhcp_options_id": "dopt-09e4043ff3aa56c82",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03ec52af16e129f03",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-091f15a97cd9a349b",
            "owner_id": "427601800855",
            "tags": {
              "Name": "demo_project-vpc"
            },
            "tags_all": {
              "Name": "demo_project-vpc"
            }
          }
        }
      ]
    }
  ]
}